src/tests/TodoList/errors/TheTodoAlreadyExists.ts
import { CustomError } from '../../../lib'

export default CustomError<'TheTodoAlreadyExists'>({
  name: 'TheTodoAlreadyExists',
})
